classDiagram
    class User {
        -String id
        -String firstName
        -String lastName
        +login(String username, String password) boolean
        +getId() String
        +getFirstName() String
        +getLastName() String
    }

    class Student {
        +registerForCourse(Course course)
        +getRegisteredCourses() List~Course~
    }

    class Lecturer {
        +manageCourse(Course course)
        +getManagedCourses() List~Course~
    }

    class Course {
        -String courseId
        -String name
        +getCourseId() String
        +getName() String
    }

    class Lecture {
        -String id
        -String name
        +getId() String
        +getName() String
    }

    class ExerciseGroup {
        -String groupId
        -int maxCapacity
        -TimeSlot timeSlot
        +getGroupId() String
        +getMaxCapacity() int
        +getTimeSlot() TimeSlot
    }

    class TimeSlot {
        -DayOfWeek day
        -LocalTime startTime
        -LocalTime endTime
        +getDay() DayOfWeek
        +getStartTime() LocalTime
        +getEndTime() LocalTime
    }

    User <|-- Student
    User <|-- Lecturer
    Course <|-- Lecture
    Course "1" -- "*" ExerciseGroup
    ExerciseGroup "*" -- "1" TimeSlot
    Student "*" -- "*" Course
    Lecturer "1" -- "*" Course
